# business-case-assistant

./: .gitignore  README.md  pyproject.toml
src/beeai_agents/: agent.py  graph.py
src/business_case_assistant/: agent.py  graph.py  langgraph.json
